<resources>
    <string name="app_name">MyContacts</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>

    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="groups">Groups</string>

    <string name="newContact">New Contact</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="note">Note</string>

    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="msg_no_contacts">There is no contacts here. Add some :)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
